# MeshMerger

./: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Mesh.h  MeshToGL.h  README.md  main.cpp
MyGL/: CMakeLists.txt  Camera.cpp  Camera.h  LineSegment.cpp  LineSegment.h  LogConsole.cpp  LogConsole.h  Mesh.cpp  Mesh.h  PickVertex.cpp  PickVertex.h  PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  Utils.h  Window.cpp  Window.h
data/shaders/: phong.frag  phong.vert  pick_vertex.frag  pick_vertex.vert  round_point.frag
